--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "devDependencies": {
       "babel": "npm:babel-core@^5.8.24",
       "babel-runtime": "npm:babel-runtime@^5.8.24",
-      "core-js": "npm:core-js@^1.1.4"
+      "core-js": "npm:core-js@^1.1.4",
+      "react": "npm:react@^15.6.1",
+      "react-dom": "npm:react-dom@^15.6.1",
+      "react-redux": "npm:react-redux@^3.0.0",
+      "redux": "npm:redux@^3.7.2"
     }
   }
 }
